[gd_scene load_steps=3 format=3 uid="uid://dq0xeb67ygqvi"]

[ext_resource type="Script" path="res://trick.gd" id="1_3sljv"]
[ext_resource type="PackedScene" uid="uid://c4vi1t5xc3hty" path="res://player.tscn" id="2_a3fo8"]

[node name="Trick" type="Node2D"]
script = ExtResource("1_3sljv")

[node name="Label" type="Label" parent="."]
offset_left = 543.0
offset_top = 26.0
offset_right = 584.0
offset_bottom = 51.0
text = "Trick"

[node name="Complete Button" type="Button" parent="."]
offset_left = 1025.0
offset_top = 33.0
offset_right = 1108.0
offset_bottom = 64.0
text = "Complete"

[node name="Done" type="Button" parent="."]
offset_left = 1002.0
offset_top = 562.0
offset_right = 1085.0
offset_bottom = 593.0
text = "Done"

[node name="Player" parent="." instance=ExtResource("2_a3fo8")]
position = Vector2(147, 305)

[node name="EnemyContainer" type="HBoxContainer" parent="."]
offset_left = 683.0
offset_top = 299.0
offset_right = 1121.0
offset_bottom = 375.0
theme_override_constants/separation = 96

[node name="CandyContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(64, 0)
offset_left = 116.0
offset_top = 533.0
offset_right = 554.0
offset_bottom = 572.0
scale = Vector2(2, 2)
theme_override_constants/separation = 32
alignment = 1

[connection signal="pressed" from="Complete Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Done" to="." method="_on_done_pressed"]
